@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2016/06/08 19:22:24 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2016/10/05 19:49:07 shattered Exp $
 
-DISTNAME=	DBD-Oracle-1.23
+DISTNAME=	DBD-Oracle-1.74
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	7
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
